--- a/src/app/login/main-page/board/task-preview/dialog-show-edit-task/dialog-show-task.scss
+++ b/src/app/login/main-page/board/task-preview/dialog-show-edit-task/dialog-show-task.scss
@@ -15,9 +15,17 @@
   }
 
   @media (max-width: 420px) {
-    width: 300px;
+    width: 380px;
     max-height: 95vh;
     padding-right: 20px;
+  }
+
+  @media (max-width: 375px) {
+    width: 345px;
+  }
+
+  @media (max-width: 350px) {
+    width: 300px;
   }
 
   header {
